# UEShaderMapExtractor

./: CMakeLists.txt  README.md  decompress_shader.cpp  extractPreshader.py  extractShaderFromArchive.py  extractShaderFromArchive_MarvelRivals.py  extractShaderFromArchive_UE5.py  lz4.cpp  lz4.h  parseAndDecompressShaders.py  preshaderToUniformBuffer_4.25.py  preshaderToUniformBuffer_4.26-27.py  preshaderToUniformBuffer_UE5.0-5.4.py  preshaderToUniformBuffer_UE5.5.py
ShaderHash/: CityHash.cpp  shaderhash.cpp
